# poll-ic-rs

./: Cargo.toml  README.md  dfx.json  package-lock.json
src/poll_backend/: Cargo.toml  poll_backend.did
src/poll_backend/src/: lib.rs
src/poll_frontend/: package.json
