[package]
name = "poll_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.4"
ic-cdk = "0.12.0"
ic-cdk-timers = "0.10"
serde = "1.0.215"
candid_derive = "0.6.6"
